--- a/static/index.html
+++ b/static/index.html
@@ -21,10 +21,11 @@
 </head>
 
 <body>
+  <div class="container">
 	<div>
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div>
+		<div class="jumbotron">
 			<h1>Michael Bernstein</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
 		</div>
@@ -83,6 +84,7 @@
 			</a>
 		</div>
 	</div>
+</div>
 <script src="https://code.jquery.com/jquery.js"></script>
 <!-- Include all compiled plugins (blelow), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
