--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,27 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 <link href="css/introHCI.css" rel="stylesheet">
+<style>
+  body {
+    background: #2c3e50;
+  }
+  .container {
+    max-width:400px;
+  }
 
+  a > p {
+    text-align:center;
+    margin-top:10px;
+  }
+  a {
+    color: rgba(0,0,0,0.8);
+  }
+  h4 {
+    font-variant: small-caps;
+    text-align:center;
+  }
+
+  </style>
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -31,7 +51,7 @@
 		</div>
 
 
-		<h4>Projects</h4>
+		<h4 class="thumbnail">Projects</h4>
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
